# ml-management-tools

./: .gitignore  Makefile  README.md  config.yml  pyproject.toml  setup.cfg
notebooks/: house_prices.ipynb  iris.ipynb  mlflow-tutorial.ipynb  optuna-tutorial.ipynb  skopt-tutorial.ipynb
tools/airflow/: airflow.cfg  tutorial.py  unittests.cfg
tools/airflow/logs/scheduler/: latest
tools/hydra/: config.yaml  my_app.py
tools/hydra/db/: postgresql.yaml
tools/hydra/model/: catboost.yaml  elastic_net.yaml
tools/kedro/tutorial/: .kedro.yml  README.md  setup.cfg
tools/kedro/tutorial/conf/base/: catalog.yml  parameters.yml
tools/kedro/tutorial/docs/source/: conf.py  index.rst
tools/kedro/tutorial/src/: setup.py
tools/kedro/tutorial/src/tests/: test_run.py
tools/kedro/tutorial/src/tutorial/: __init__.py  pipeline.py  run.py
tools/kedro/tutorial/src/tutorial/pipelines/data_engineering/: nodes.py  pipeline.py
tools/kedro/tutorial/src/tutorial/pipelines/data_science/: nodes.py  pipeline.py
tools/metaflow/: tutorial.py
tools/mlflow/: mlflow_tracking.py
tools/sacred/: capture_function.py  ex1.py  h01_hello_world.py  hello_config.py  main.py  my_experiment.py  named_configs_demo.py
